# WeatherTrading-Evo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: forecast_policy.yaml  settings.yaml  source_registry.yaml  station_catalog.yaml  watchlist.yaml
docs/: market_rule_examples.md  mvp_foundation.md  station_catalog_and_sources.md  windows_setup.md
logs/: README.md
logs/entries/: 2026-04-05_accuracy_optimization_round_1.md  2026-04-05_blind_live_validation_snapshot.md  2026-04-05_deep_review_fixes.md  2026-04-05_dev_dependencies_split.md  (+86 more)
scripts/: bootstrap_windows.ps1  build_macos_app.py  install_launchd_scheduler.py  run_adaptive_policy_stability.py  run_bin_family_diagnostics.py  run_blind_live_validation.py  run_blind_snapshot_resolution_audit.py  run_cohort_overlay_diagnostics.py  run_contractual_probability_temperature_calibration.py  run_contractual_resolution_audit.py  run_daily_pipeline.py  run_daily_pipeline_launchd.sh  run_forecast_provider_comparison.py  run_full_cycle.py  run_historical_temperature_backtest.py  run_multidate_policy_stability.py  run_observation_backfill.py  run_operational_readiness.py  run_operator_console.py  run_operator_ui.py  run_probability_temperature_calibration.py  run_recent_horizon_temperature_backtest.py  run_station_bias_diagnostics.py  run_trader_behavior_profile.py  run_watchlist_strategy_simulation.py  test_execution_engine.py  test_ingestion.py  test_ml_refinement.py  test_parser.py  test_persistence.py  test_pricing.py  test_station_catalog.py
tests/: conftest.py
(+287 files in other folders)
